[tool.poetry]
name = "lexy"
version = "0.1.0"
description = ""
authors = ["Reza Shabani"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
sqlmodel = "^0.0.11"
psycopg2-binary = "^2.9.7"
asyncpg = "^0.28.0"
uvicorn = "^0.23.2"
flower = "^2.0.1"
celery = "^5.3.4"

# optional dependencies
transformers = { version = "^4.33.1", extras = ["torch"], optional = true}
sentence-transformers = { version = "^2.2.2", optional = true}

[tool.poetry.extras]
lexy_transformers = ["transformers", "sentence-transformers"]

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pytest-httpx = "^0.24.0"
httpx = "^0.24.1"
greenlet = "^2.0.2"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.3.1"
mkdocstrings = "^0.23.0"
pygments = "^2.16.1"
pymdown-extensions = "^10.3"
mkdocs-git-revision-date-localized-plugin = "^0.9.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.core.masonry.api"
