[tool.poetry]
name = "lexy"
version = "0.1.0"
description = "Lexy is a data platform for building AI applications."
authors = ["Reza Shabani"]
license = "Apache 2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.109.0,<1.0.0"
sqlmodel = "^0.0.16"
sqlalchemy = "^2.0.29"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
psycopg2-binary = "^2.9.7"
asyncpg = "^0.28.0"
uvicorn = "^0.23.2"
flower = "^2.0.1"
celery = "^5.3.4"
python-multipart = "^0.0.6"
httpx = "^0.24.1"
awscli = "^1.32.4"
boto3 = "^1.34.4"
Pillow = "^10.0.1"
pgvector = "^0.2.5"

# optional dependencies
transformers = { version = "^4.33.1", extras = ["torch"], optional = true}
sentence-transformers = { version = "^2.2.2", optional = true}
openai = { version = "^1.7.1", optional = true}

[tool.poetry.extras]
lexy_transformers = ["transformers", "sentence-transformers", "openai"]

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pytest-httpx = "^0.24.0"
httpx = "^0.24.1"
greenlet = ">=2.0.2"
pytest-env = "^1.1.3"
pytest-celery = "^0.0.0"
asgi-lifespan = "^2.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.3.1"
mkdocs-encryptcontent-plugin = "^3.0.0"
mkdocs-git-revision-date-localized-plugin = "^0.9.3"
mkdocstrings = { version = "^0.23.0", extras = ["python"] }
pygments = "^2.16.1"
pymdown-extensions = "^10.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
    "RUN_ENV=test",
    "CELERY_CONFIG=testing",
]

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.core.masonry.api"
